# Computer-Vision

./: README.md  task2.cpp  task3.cpp  task4.cpp  task5.cpp
Lab 1 - Intro OpenCV pix manipulation transformations/code/: task1.cpp  task6.cpp
Lab 2 - Filters and histogram equalization/code/: filters.cpp  filters.h  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
Lab 3 - Mouse callback and color segmentation/code/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
Lab 4 - Edge and line detection/code/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp
Lab 5 - Segmentation/code/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
Progetto Fine Corso/: CMakeLists.txt  HowToRun.txt  README.txt
Progetto Fine Corso/src/: Intersection_over_Union.h  Mask_generator.cpp  Mask_generator.h  Pixel_Accuracy.cpp  visualize_results.cpp  visualize_results.h
Progetto Fine Corso/train_model/: custom_coco_testing.yaml  custom_data.yaml
src/: Bounding_Box.cpp  Bounding_Box.h  Intersection_over_Union.cpp  Pixel_Accuracy.h  kmeans_clustering.cpp  kmeans_clustering.h  network_utils.cpp  network_utils.h  project_cv.cpp  read_test_dataset.cpp  read_test_dataset.h  segmentation.cpp  segmentation.h
train_model/: CustomTrainModel.ipynb  CustomTrainModel.py
